[package]
authors = [
    "Aaron Gallagher <_@habnab.it>",
    "Connie Hilarides <connorcpu@live.com>",
    "Denis K. <denis.k@tonlabs.io>",
    "Alexey Vavilin <alexey.v@tonlabs.io",
    "Sergei Blinov <sergei.b@gosh.sh>",
]
description = "Minimal wrappers for TVM serialization using TL-schema"
edition = "2021"
name = "tvm_api"
rust-version = "1.75.0"
version = "0.4.0"

[dependencies]
anyhow = "1.0.79"
byteorder = "1.5.0"
extfmt = "0.1.1"
hex = "0.4.3"
lazy_static = "1.4.0"
ordered-float = "4.2.0"
secstr = "0.5.1"
serde = "1.0.196"
serde_derive = "1.0.196"
thiserror = "1.0.56"
tvm_block = { git = "https://github.com/tvmlabs/tvm-block", tag = "2.0.0" }
tvm_types = { git = "https://github.com/tvmlabs/tvm-types", tag = "3.0.1" }

[build-dependencies]
serde_json = "1.0.112"
tvm_tl_codegen = { path = "../tvm_tl_codegen" }
